# respirex-backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backup  Dockerfile.test  README.md  app.py  app_minimal.py  app_simple.py  create_enhanced_model1.py  create_high_accuracy_model1.py  create_improved_model1.py  create_lightweight_models.py  create_simple_model1.py  docker-compose.yml  main.py  main_lightweight.py  main_simple.py  nixpacks.toml  pyproject.toml  railway.json  render.yaml  render_minimal.yaml  render_simple.yaml  requirements.txt  requirements_docker.txt  requirements_railway.txt  requirements_render.txt  requirements_simple.txt  setup.py  start.sh  test_app.py  wsgi.py
models/: model1_lightweight.joblib  model1_simple_improved.joblib  model2_lightweight.joblib  pca1_high_accuracy.joblib  scaler1_high_accuracy.joblib  scaler1_lightweight.joblib  scaler1_simple_improved.joblib  scaler2_lightweight.joblib  selector1_high_accuracy.joblib
