[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "respirex-backend"
version = "1.0.0"
description = "AI-powered respiratory disease detection backend"
authors = [{name = "Respirex Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "librosa==0.10.1",
    "soundfile==0.12.1",
    "numpy==1.24.3",
    "scipy==1.11.4",
    "pandas==2.0.3",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "pydantic==2.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
